[gd_scene load_steps=10 format=3 uid="uid://cg4scer0ftj64"]

[ext_resource type="Script" uid="uid://cwexr2nvgotf0" path="res://scripts/info_pop_up.gd" id="1_coj2v"]
[ext_resource type="Texture2D" uid="uid://dqabg7ysnupnu" path="res://img/ui/popup/warning_icon_red.png" id="3_hetl8"]
[ext_resource type="Script" uid="uid://oj172dymblsc" path="res://scripts/button_animation.gd" id="4_tsac6"]
[ext_resource type="StyleBox" uid="uid://l7ml62qm5sdc" path="res://tres/presets/button_style.tres" id="5_hetl8"]
[ext_resource type="StyleBox" uid="uid://vplgq7bjvkbg" path="res://tres/presets/button_disabled.tres" id="6_xik3c"]

[sub_resource type="Animation" id="Animation_qcw0a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8erbt"]
resource_name = "pop_up_animation"
length = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p8fdt"]
_data = {
&"RESET": SubResource("Animation_qcw0a"),
&"pop_up_animation": SubResource("Animation_8erbt")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_coj2v"]
bg_color = Color(0.654902, 0.756863, 0.952941, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[node name="InfoPopUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
script = ExtResource("1_coj2v")

[node name="PopUpAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p8fdt")
}

[node name="PopUpPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_coj2v")
script = ExtResource("1_coj2v")

[node name="PopUpIcon" type="TextureRect" parent="PopUpPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 75.0
offset_bottom = 75.0
texture = ExtResource("3_hetl8")
expand_mode = 1
stretch_mode = 5

[node name="PopUpTitle" type="RichTextLabel" parent="PopUpPanel"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 0
offset_left = 75.0
offset_top = 11.0
offset_right = 289.0
offset_bottom = 75.0
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 30
text = "WARNING"
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PopUpPanel"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -75.0
offset_right = 139.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 20
text = "THIS IS SOME DUMMY TEXT AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
vertical_alignment = 1

[node name="PopUpButton" type="Button" parent="PopUpPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 11.0
offset_top = 225.0
offset_right = 289.0
offset_bottom = 289.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("5_hetl8")
theme_override_styles/disabled = ExtResource("6_xik3c")
theme_override_styles/hover_pressed = ExtResource("5_hetl8")
theme_override_styles/hover = ExtResource("5_hetl8")
theme_override_styles/pressed = ExtResource("5_hetl8")
theme_override_styles/normal = ExtResource("5_hetl8")
text = "CLOSE"
script = ExtResource("4_tsac6")

[connection signal="pressed" from="PopUpPanel/PopUpButton" to="." method="_on_button_pressed"]
